# simple-covid-simulation

./: .gitignore  CMakeLists.txt  README.md  community.cpp  community.h  main.cpp  person.cpp  person.h
